<resources>
    <string name="app_name">ForexGoMark4</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="out_of_service_area">通信状態がよくありません。環境をご確認の上、サイドアクセスしてください。</string>
    <string name="title_activity_main">MainActivity</string>

    <!--ドロアーメニュー内の文字列【日本語】-->
    <string name="battle">バトル</string>
    <string name="chart">チャート</string>
    <string name="youtube">YouTube</string>
    <string name="cal">経済指標</string>
    <string name="history">トレード分析</string>
    <string name="setting">設定</string>
    <string name="payment">有料会員向け</string>
    <string name="store">ストア</string>
    <string name="review">今週の振り返り</string>
    <string name="contact">問い合わせ</string>
    <string name="send">ご要望</string>
    <string name="help">ヘルプ</string>
    <string name="app">ForexGoについて</string>
</resources>
