<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_battle">

    <fragment
        android:id="@+id/nav_battle"
        android:name="com.uppergain.mark4.ui.battle.BattleFragment"
        android:label="@string/battle"
        tools:layout="@layout/fragment_battle">
        <action
            android:id="@+id/action_nav_battle_to_nav_contact"
            app:destination="@id/nav_app" />
        <action
            android:id="@+id/action_nav_battle_to_nav_setting"
            app:destination="@id/nav_setting" />
        <action
            android:id="@+id/action_nav_battle_to_nav_history"
            app:destination="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/nav_chart"
        android:name="com.uppergain.mark4.ui.chart.ChartFragment"
        android:label="@string/chart"
        tools:layout="@layout/fragment_chartview">
    </fragment>

    <fragment
        android:id="@+id/nav_youtube"
        android:name="com.uppergain.mark4.ui.youtube.YoutubeFragment"
        android:label="@string/youtube"
        tools:layout="@layout/fragment_youtube"/>

    <fragment
        android:id="@+id/nav_cal"
        android:name="com.uppergain.mark4.ui.economy.CalFragment"
        android:label="@string/cal"
        tools:layout="@layout/fragment_cal">
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.uppergain.mark4.ui.history.TradingHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_nav_history_to_nav_battle"
            app:destination="@id/nav_battle" />
    </fragment>

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.uppergain.mark4.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_nav_setting_to_nav_battle"
            app:destination="@id/nav_battle" />
    </fragment>

    <fragment
        android:id="@+id/nav_store"
        android:name="com.uppergain.mark4.ui.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store">
    </fragment>

    <fragment
        android:id="@+id/nav_youtube2"
        android:name="com.uppergain.mark4.ui.youtube2.Youtube2Fragment"
        android:label="@string/youtube2"
        tools:layout="@layout/fragment_youtube2">
    </fragment>

    <fragment
        android:id="@+id/nav_send"
        android:name="com.uppergain.mark4.ui.about.AboutFragment"
        android:label="@string/send"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_nav_contact_to_nav_battle"
            app:destination="@id/nav_battle" />
    </fragment>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.uppergain.mark4.ui.about.AboutFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment
        android:id="@+id/nav_app"
        android:name="com.uppergain.mark4.ui.about.AboutFragment"
        android:label="@string/app"
        tools:layout="@layout/fragment_about">
    </fragment>


    <fragment
        android:id="@+id/nav_home"
        android:name="com.uppergain.mark4.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.uppergain.mark4.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.uppergain.mark4.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.uppergain.mark4.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>